# cnw-ai

./: .gitignore
clustereye/: Makefile  prompt.txt  pyproject.toml
clustereye/config/: sources.yaml
clustereye/data/qdrant_storage/: raft_state.json
clustereye/data/workdir/clickhouse-operations/: clickhouse.com_.html  clickhouse.com_blog.html  clickhouse.com_clickhouse.html  clickhouse.com_cloud.html  clickhouse.com_cloud_bring-your-own-cloud.html  clickhouse.com_company_contact_loc=nav.html  clickhouse.com_company_events.html  clickhouse.com_comparison_bigquery.html  clickhouse.com_comparison_postgresql.html  clickhouse.com_comparison_redshift.html  clickhouse.com_comparison_rockset.html  clickhouse.com_comparison_snowflake.html  clickhouse.com_demos.html  clickhouse.com_docs.html  clickhouse.com_docs_about.html  clickhouse.com_docs_chdb.html  clickhouse.com_docs_clickhouse-operator_overview.html  clickhouse.com_docs_cloud_overview.html  clickhouse.com_docs_deployment-guides_index.html  clickhouse.com_docs_faq_operations_multi-region-replication.html  clickhouse.com_docs_faq_operations_production.html  clickhouse.com_docs_getting-started_playground.html  clickhouse.com_docs_guides_manage-and-deploy-index.html  clickhouse.com_docs_guides_separation-storage-compute.html  (+76 more)
clustereye/scripts/: bootstrap.sh  monitor.sh  setup.sh
clustereye/src/clustereye/: __main__.py  api.py  cli.py  config.py  export_import.py  rag.py  ui.py
clustereye/tests/: conftest.py  test_api.py  test_chunker.py  test_config_loader.py  test_crawler.py  test_export_import.py  test_smoke.py
elchi/: pyproject.toml
elchi/config/: sources.yaml
elchi/data/: dataset.jsonl
elchi/scripts/: setup.sh
elchi/src/cnw_ai/: __main__.py  app.py  cli.py  config.py  rag.py
elchi/tests/: conftest.py  test_chunker.py  test_config_loader.py  test_proto_parser.py  test_smoke.py
(+781 files in other folders)
